--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     },
     "autoload": {
         "psr-4": {
-            "oxklabauter\\marketplace-module\\": "../../../source/modules/oxklabauter/marketplace-module"
+            "oxklabauter\\marketplace-module\\": ""
         }
     },
-  "minimum-stability": "stable",
-  "prefer-stable": false
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
