Update composer.json stable

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
             "oxklabauter\\marketplace-module\\": ""
         }
     },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
